--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,7 @@ html, body {
 .top-nav .nav-link{
     font-size: 0.9rem;
     color: #495b66;
+    white-space: nowrap;
   }
   
   .top-nav .form-control:hover{
@@ -67,7 +68,7 @@ html, body {
   
   .nav-link.active{
     border-bottom: 3px solid #0d6efd;
-  
+
     margin-bottom: -0.5rem;
   }
   
@@ -92,7 +93,7 @@ html, body {
     position: -webkit-sticky;
     position: sticky;
     top: 0.5rem;
-    width: 12vw;
+    width: 14vw;
   
     /* height: calc(100vh - 7rem); */
     overflow-y: auto;
@@ -128,6 +129,10 @@ html, body {
     margin-left: 1.25rem;
     color: rgba(0, 0, 0, 0.65);
     text-decoration: none;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    font-size: .9rem;
   }
   
   .bd-links a:hover,
@@ -138,10 +143,17 @@ html, body {
   
   .bd-links .btn {
     padding: 0.25rem 0.5rem;
+    font-size: .9rem;
     font-weight: 600;
-    color: rgba(0, 0, 0, 0.65);
+    color: rgba(0, 0, 0, 0.75);
     background-color: transparent;
     border: 0;
+  }
+
+  .bd-links .btn span{
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
   }
   
   .bd-links .btn:hover,
@@ -154,20 +166,22 @@ html, body {
     box-shadow: 0 0 0 1px rgba(13, 110, 253, 0.2);
   }
   
-  .bd-links .btn::before {
-    width: 1.25em;
+  .bd-links .btn.drop::after {
+    margin-left: 2px;
     line-height: 0;
-    content: url("download.svg");
+    content: "\f0d7";
+    font: var(--fa-font-solid);
     transition: transform 0.35s ease;
-    transform-origin: 0.5em 50%;
+    position: absolute;
+    right: 2em;
   }
   
-  .bd-links .btn[aria-expanded="true"] {
+  .bd-links .btn.drop[aria-expanded="true"] {
     color: rgba(0, 0, 0, 0.85);
   }
   
-  .bd-links .btn[aria-expanded="true"]::before {
-    transform: rotate(90deg);
+  .bd-links .btn.drop[aria-expanded="true"]::after {
+    transform: rotate(180deg);
   }
   
   .bd-links .active {
@@ -179,7 +193,15 @@ html, body {
     width: 100%;
     flex: 1;
     height: calc(100vh - 6.625rem);
+    height: 100%;
     overflow-y: auto;
+  }
+
+  footer{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
   }
   
   .btn-outline-new{
@@ -193,4 +215,9 @@ html, body {
     color: #0d6efd;
     background-color: rgba(13, 110, 253, 0.1);
     border: 1px solid rgba(13, 110, 253, 0.5);
+  }
+
+  .dropdown-menu{
+    position: absolute;
+    right:0;
   }
