--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,10 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
+h1,h2,h3,h4,h6,p{
+  color: var(--main-text-black);
+}
+
 /* scroll bar */
 
 /* width */
@@ -73,7 +77,7 @@ body {
 }
 
 #left-nav-panel {
-  height: calc(100vh - 6.625rem);
+  height: calc(100vh - 6rem);
   /* position: absolute; */
   top: 0;
   left: 0;
@@ -239,4 +243,9 @@ footer {
 .quick-links-sub-panel{
   height: 88vh;
   width: 18vw;
+}
+
+#tabs-container{
+  background-color: var(--background);
+  height: 100%;
 }
